experiments/Kube/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsg-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tsg-server
  template:
    metadata:
      name: tsg-server-pod
      labels:
        app: tsg-server
    spec:
      containers:
        - name: tsg-server-container
          image: vivekdock26/tsg-server:cbcb937
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tsg-server-service
spec:
  selector:
    app: tsg-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tsg-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tsg-server-service
                port:
                  number: 80
